--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -44,17 +44,9 @@
         <div id="page" class="">
             <!-- layout-wrap -->
            <div class="layout-wrap">
-                <!-- preload -->
-                <!-- <div id="preload" class="preload-container">
-                    <div class="preloading">
-                        <span></span>
-                    </div>
-                </div> -->
-                <!-- /preload -->
-                <!-- section-menu-left -->
                 <div class="section-menu-left">
                     <div class="box-logo">
-                        <a href="/dashboard" id="site-logo-inner">
+                        <a href="/admin/dashboard" id="site-logo-inner">
                             <img class="" id="logo_header" alt="" src="images/logo/logo.png" data-light="images/logo/logo.png" data-dark="images/logo/logo-dark.png" >
                         </a>
                         <div class="button-show-hide">
@@ -72,7 +64,7 @@
                                     </a>
                                     <ul class="sub-menu" style="display: block;">
                                         <li class="sub-menu-item">
-                                            <a href="/dashboard" class="active">
+                                            <a href="/admin/dashboard" class="active">
                                                 <div class="text">Home 01</div>
                                             </a>
                                         </li>
@@ -90,12 +82,12 @@
                                     </a>
                                     <ul class="sub-menu">
                                         <li class="sub-menu-item">
-                                            <a href="/add-product" class="">
+                                            <a href="/admin/add-product" class="">
                                                 <div class="text">Add Product</div>
                                             </a>
                                         </li>
                                         <li class="sub-menu-item">
-                                            <a href="product-list.html" class="">
+                                            <a href="/admin/product-list" class="">
                                                 <div class="text">Product List</div>
                                             </a>
                                         </li>
@@ -108,7 +100,7 @@
                                     </a>
                                     <ul class="sub-menu">
                                         <li class="sub-menu-item">
-                                            <a href="category-list.html" class="">
+                                            <a href="/admin/category-list" class="">
                                                 <div class="text">Category list</div>
                                             </a>
                                         </li>
@@ -296,8 +288,10 @@
                                         <div class="icon"><i class="icon-help-circle"></i></div>
                                         <div class="text">Help center</div>
                                     </a>
+
                                 </li>
-                                <li class="menu-item">
+                              
+                               <li class="menu-item">
                                     <a href="#" class="">
                                         <div class="icon">
                                             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1830,20 +1824,20 @@
     <!-- /#wrapper -->
 
     <!-- Javascript -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/bootstrap-select.min.js"></script>
-    <script src="js/zoom.js"></script>
-    <script src="js/apexcharts/apexcharts.js"></script>
-    <script src="js/apexcharts/line-chart-1.js"></script>
-    <script src="js/apexcharts/line-chart-2.js"></script>
-    <script src="js/apexcharts/line-chart-3.js"></script>
-    <script src="js/apexcharts/line-chart-4.js"></script>
-    <script src="js/apexcharts/line-chart-5.js"></script>
-    <script src="js/apexcharts/line-chart-6.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap-select.min.js"></script>
+    <script src="/js/zoom.js"></script>
+    <script src="/js/apexcharts/apexcharts.js"></script>
+    <script src="/js/apexcharts/line-chart-1.js"></script>
+    <script src="/js/apexcharts/line-chart-2.js"></script>
+    <script src="/js/apexcharts/line-chart-3.js"></script>
+    <script src="/js/apexcharts/line-chart-4.js"></script>
+    <script src="/js/apexcharts/line-chart-5.js"></script>
+    <script src="/js/apexcharts/line-chart-6.js"></script>
     <!-- <script src="js/switcher.js"></script> -->
-    <script src="js/theme-settings.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/theme-settings.js"></script>
+    <script src="/js/main.js"></script>
 
 </body>
 
