--- a/views/admin/add-variant.ejs
+++ b/views/admin/add-variant.ejs
@@ -43,13 +43,13 @@
         <!-- #page -->
         <div id="page" class="">
             <!-- layout-wrap -->
-           <div class="layout-wrap">
+           <div class="layout-wrap">                
                 <!-- preload -->
-                <!-- <div id="preload" class="preload-container">
+                <div id="preload" class="preload-container">
                     <div class="preloading">
                         <span></span>
                     </div>
-                </div> -->
+                </div>
                 <!-- /preload -->
                 <!-- section-menu-left -->
                 <div class="section-menu-left">
@@ -113,19 +113,19 @@
                         <div class="center-item">
                             <div class="center-heading">All page</div>
                             <ul class="menu-list">
-                                <li class="menu-item has-children active">
+                                <li class="menu-item has-children">
                                     <a href="javascript:void(0);" class="menu-item-button">
                                         <div class="icon"><i class="icon-shopping-cart"></i></div>
                                         <div class="text">Ecommerce</div>
                                     </a>
-                                    <ul class="sub-menu" style="display: block;">
+                                    <ul class="sub-menu">
                                         <li class="sub-menu-item">
                                             <a href="add-product.html" class="">
                                                 <div class="text">Add Product</div>
                                             </a>
                                         </li>
                                         <li class="sub-menu-item">
-                                            <a href="product-list.html" class="active">
+                                            <a href="product-list.html" class="">
                                                 <div class="text">Product List</div>
                                             </a>
                                         </li>
@@ -149,19 +149,19 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li class="menu-item has-children">
+                                <li class="menu-item has-children active">
                                     <a href="javascript:void(0);" class="menu-item-button">
                                         <div class="icon"><i class="icon-box"></i></div>
                                         <div class="text">Attributes</div>
                                     </a>
-                                    <ul class="sub-menu">
+                                    <ul class="sub-menu" style="display: block;">
                                         <li class="sub-menu-item">
                                             <a href="attributes.html" class="">
                                                 <div class="text">Attributes</div>
                                             </a>
                                         </li>
                                         <li class="sub-menu-item">
-                                            <a href="add-attributes.html" class="">
+                                            <a href="add-attributes.html" class="active">
                                                 <div class="text">Add attributes</div>
                                             </a>
                                         </li>
@@ -838,7 +838,7 @@
                             <!-- main-content-wrap -->
                             <div class="main-content-wrap">
                                 <div class="flex items-center flex-wrap justify-between gap20 mb-27">
-                                    <h3>Product List</h3>
+                                    <h3>Add Attribute</h3>
                                     <ul class="breadcrumbs flex items-center flex-wrap justify-start gap10">
                                         <li>
                                             <a href="index.html"><div class="text-tiny">Dashboard</div></a>
@@ -847,133 +847,41 @@
                                             <i class="icon-chevron-right"></i>
                                         </li>
                                         <li>
-                                            <a href="#"><div class="text-tiny">Ecommerce</div></a>
+                                            <a href="#"><div class="text-tiny">Attributes</div></a>
                                         </li>
                                         <li>
                                             <i class="icon-chevron-right"></i>
                                         </li>
                                         <li>
-                                            <div class="text-tiny">Product List</div>
+                                            <div class="text-tiny">Add Attribute</div>
                                         </li>
                                     </ul>
                                 </div>
-                                <!-- product-list -->
+                                <!-- new-attribute -->
                                 <div class="wg-box">
-                                    <div class="title-box">
-                                        <i class="icon-coffee"></i>
-                                        <div class="body-text">Tip search by Product ID: Each product is provided with a unique ID, which you can rely on to find the exact product you need.</div>
-                                    </div>
-                                    <div class="flex items-center justify-between gap10 flex-wrap">
-                                        <div class="wg-filter flex-grow">
-                                            <div class="show">
-                                                <div class="text-tiny">Showing</div>
-                                                <div class="select">
-                                                    <select class="">
-                                                        <option>10</option>
-                                                        <option>20</option>
-                                                        <option>30</option>
-                                                    </select>
-                                                </div>
-                                                <div class="text-tiny">entries</div>
-                                            </div>
-                                            <form class="form-search">
-                                                <fieldset class="name">
-                                                    <input type="text" placeholder="Search here..." class="" name="name" tabindex="2" value="" aria-required="true" required="">
-                                                </fieldset>
-                                                <div class="button-submit">
-                                                    <button class="" type="submit"><i class="icon-search"></i></button>
-                                                </div>
-                                            </form>
+                                    <form class="form-new-product form-style-1"  action="/admin/add-variant" method="POST">
+                                        <fieldset class="name">
+                                            <label for="productId" class="body-title" >Product ID</label>
+                                            <input class="flex-grow" type="text" placeholder="Product ID" name="text" tabindex="0" value="" aria-required="true" required="">
+                                        </fieldset>
+                                        <fieldset class="name">
+                                            <label for="milliliters" class="body-title">Milliliters</label>
+                                            <input class="flex-grow" type="text" placeholder="Milliliters" name="text" tabindex="0" value="" aria-required="true" required="">
+                                        </fieldset>
+                                        <fieldset class="name">
+                                            <label for="price" class="body-title">Price</label>
+                                            <input class="flex-grow" type="text" placeholder="Price" name="text" tabindex="0" value="" aria-required="true" required="">
+                                        </fieldset><fieldset class="name">
+                                            <label for="stock" class="body-title"> Stock</label>
+                                            <input class="flex-grow" type="text" placeholder="Stock" name="text" tabindex="0" value="" aria-required="true" required="">
+                                        </fieldset>
+                                        <div class="bot">
+                                            <div></div>
+                                            <button class="tf-button w208" type="submit">Save</button>
                                         </div>
-                                        <a class="tf-button style-1 w208" href="/admin/add-product"><i class="icon-plus"></i>Add new</a>
-                                    </div>
-                                    <div class="wg-table table-product-list">
-                                        <ul class="table-title flex gap20 mb-14">
-                                            <li>
-                                                <div class="body-title">Product ID</div>
-                                            </li>
-                                            <li>
-                                                <div class="body-title">Product Name</div>
-                                            </li>    
-                                            <li>
-                                                <div class="body-title">Frangrance Type</div>
-                                            </li>
-                                            <li>
-                                                <div class="body-title">Gender</div>
-                                            </li>
-                                            <li>
-                                                <div class="body-title">Occasion</div>
-                                            </li>
-                                            <!-- <li>
-                                                <div class="body-title">Description</div>
-                                            </li> -->
-                                            <li>
-                                                <div class="body-title">Start date</div>
-                                            </li>
-                                            <li>
-                                                <div class="body-title">Action</div>
-                                            </li>
-                                        </ul>
-                                        <ul class="flex flex-column">
-                                            <% products.forEach(product => { %>
-                                              <li class="product-item gap14">
-                                                <div class="image no-bg">
-                                                    <% if (product.images && product.images.length > 0) { %>
-                                                        <img src="<%= product.images[0] %>" alt="Product Image">
-                                                        <% } %>
-                                                    </div>
-                                                    <div class="flex items-center justify-between gap20 flex-grow">
-                                                        <div class="name">
-                                                    <a href="product-list.html" class="body-title-2"><%= product._id %></a>
-                                                  </div>
-                                                  <div class="body-text"><%= product.name %></div> <!-- Assuming the product ID is to be shown -->
-                                                  <div class="body-text"><%= product.fragranceType %></div>
-                                                  <div class="body-text"><%= product.gender %></div>
-                                                  <div class="body-text"><%= product.occasions %></div>
-                                                  <div class="body-text"><%= new Date(product.createdAt).toLocaleDateString() %></div>
-                                                  
-                                                  
-                                                  
-                                                  <div class="list-icon-function">
-                                                    <div class="item eye">
-                                                      <i class="icon-eye"></i>
-                                                    </div>
-                                                    <div class="item edit">
-                                                      <i class="icon-edit-3"></i>
-                                                    </div>
-                                                    <div class="item trash">
-                                                      <i class="icon-trash-2"></i>
-                                                    </div>
-                                                  </div>
-                                                </div>
-                                              </li>
-                                            <% }) %>
-                                          </ul>
-                                          
-                                    </div>
-                                    <div class="divider"></div>
-                                    <div class="flex items-center justify-between flex-wrap gap10">
-                                        <div class="text-tiny">Showing 10 entries</div>
-                                        <ul class="wg-pagination">
-                                            <li>
-                                                <a href="#"><i class="icon-chevron-left"></i></a>
-                                            </li>
-                                            <li>
-                                                <a href="#">1</a>
-                                            </li>
-                                            <li class="active">
-                                                <a href="#">2</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">3</a>
-                                            </li>
-                                            <li>
-                                                <a href="#"><i class="icon-chevron-right"></i></a>
-                                            </li>
-                                        </ul>
-                                    </div>
+                                    </form>
                                 </div>
-                                <!-- /product-list -->
+                                <!-- /new-category -->
                             </div>
                             <!-- /main-content-wrap -->
                         </div>
